<resources>
    <string name="app_name">Home Project</string>
    <string name="login">Login</string>
    <string name="email_address">Email Address</string>
    <string name="password">password</string>
    <string name="did_you_forget_your_password">Forgot Password ?</string>
    <string name="create_new_account">Create New Account</string>
    <string name="register_new_account">Create New Account</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="phone">Phone Number</string>
    <string name="country">Country</string>
    <string name="user_name">User Name</string>
    <string name="retrive_account_information">Retrieve Your Account</string>
    <string name="retrive">Retrieve</string>
    <string name="about_us1">For us… It is not just about delivering your order… It is a communication channel that always meet your needs…</string>
    <string name="about_us2">*The first and only application in Kuwait that provides a unique and distinctive services to customers… including a refund of 10% from the value of your purchases on each order you requested from our application through cashback program which will be automatically refunded to the customer’s digital wallet, in addition to that there will be other offers and discounts.
*Tadallal… is a service of ordering food, flowers, sweets, chocolate, pharmacies, associations, perfumes, clothes, as there are many other participating commercial companies… Tadallal in every single thing you want while ordering online…
*It is one of the fastest and easiest ways that will help you in getting your order from places that is near to your area, and choosing what you need according to the type of the order that you want.</string>
    <string name="about_us3">*Tadallal is an electronic application in which you enjoy every day, upon requests, the daily offers and discounts offered by hundreds of companies, restaurants, fashion, perfumes, flowers, associations, pharmacies and other departments participating with us on the application…
**Order from Tadallal and get the best offers, services, as well as 10% of the value of your purchases will be refunded directly to your wallet. You can use it as you wish.</string>
    <string name="about_us_title1">About Tadallal Application</string>
    <string name="about_us_title2">Tadallal… everything you desire in one touch</string>
    <string name="about_us_title3">What is Tadallal application…?</string>
    <string name="www_alshal_sa">www.tadallal.sa</string>
    <string name="saudi_arabia_jeddah_966_12_600000_ext_3101_info_alshal_sa">Saudi Arabia, Jeddah +966 12 600000 Ext 3101 info@tadallal.sa</string>
    <string name="about_app">About App</string>
    <string name="main">Main</string>
    <string name="my_account">My Account</string>
    <string name="favourit">Favourite</string>
    <string name="search">Search</string>
    <string name="help">Help</string>
    <string name="or">Or</string>
    <string name="add_address">Add address</string>
    <string name="full_name">Full Name *</string>
    <string name="country_">Country*</string>
    <string name="city_">City*</string>
    <string name="neighborhood_name">Neighborhood name*</string>
    <string name="street_name">Street number*</string>
    <string name="postal_code">Postal number</string>
    <string name="phone_number">Phone number*</string>
    <string name="continue_">Continue</string>
    <string name="back">back</string>
    <string name="_966">966+</string>
    <string name="ryal">KWD</string>
    <string name="description">Description</string>
    <string name="style">Style</string>
    <string name="color">Color</string>
    <string name="cloth">Cloth</string>
    <string name="arm_type">Arm type</string>
    <string name="size_">Size</string>
    <string name="clarify_the_size_chart">Clarify the size chart</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="delivery_addresses">Delivery_addresses</string>
    <string name="add">Add</string>
    <string name="choose">choose</string>
    <string name="size_table">Size Table</string>
    <string name="sizing_chart_video">Sizing chart video</string>
    <string name="all_dimensions_are_taken_in_inches">All dimensions are taken in inches</string>
    <string name="sleeve_aperture_depending_on_the_model">Sleeve aperture depending on the model</string>
    <string name="sleeve_size_from_the_beginning_of_the_shoulder">The sleeve fits from the beginning of the shoulder*</string>
    <string name="shopping_basket">Shopping basket</string>
    <string name="complete_the_request">Complete order</string>
    <string name="continue_shopping">Continue shopping</string>
    <string name="there_are_no_product_in_cart">There are no products in the cart</string>
    <string name="quntity">Quantity:</string>
    <string name="change_language">change Language</string>
    <string name="confirm">Confirm</string>
    <string name="delivery_address">Delivery Address:</string>
    <string name="payment_method">Payment method:</string>
    <string name="confirm_order">Confirm order</string>
    <string name="edit">Edit</string>
    <string name="use">Use</string>
    <string name="total">Total</string>
    <string name="delivery">delivery</string>
    <string name="taxes">taxes</string>
    <string name="final_total">Total</string>
    <string name="paying_off">Paying</string>
    <string name="abayas_occasions">Abayas occasions</string>
    <string name="discount_section">Discount section %</string>
    <string name="main_page">Main page</string>
    <string name="order_history">Order history</string>
    <string name="about_us_">About us</string>
    <string name="terms_and_conditions">Terms and conditions</string>
    <string name="change_language_">Change language</string>
    <string name="sign_in">Sign in</string>
    <string name="ther_is_no_data_to_show">No Data To Show</string>
    <string name="add_new_address">Add New Address</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="profile_info">Personal profile</string>
    <string name="orders">Orders</string>
    <string name="account_info">Account info</string>
    <string name="edit_profile">Edit profile</string>
    <string name="search_about_specific_product">Search for a specific product</string>
    <string name="there_is_no_product_with_this_name">There is no product with this name</string>
</resources>