<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGray3"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <LinearLayout
                android:id="@+id/linearCart"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">




                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="33dp"
                    android:gravity="center"
                    android:orientation="vertical">


                    <com.application.tedallal_app.Utils.TextViewWithFontbold
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/shopping_basket"
                        android:fontFamily="@font/tajawal_bold"
                        android:textColor="@color/colorGray6"
                        android:textSize="18sp" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginBottom="36dp">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rcyCart"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                </LinearLayout>


                <Button
                    android:id="@+id/btnContinueOrder"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:textColor="@color/colorw"
                    android:textSize="19sp"
                    android:text="@string/complete_the_request"
                    android:layout_marginStart="35dp"
                    android:layout_marginEnd="35dp"
                    android:fontFamily="@font/tajawal_medium"
                    android:background="@drawable/strok"
                    android:backgroundTint="@color/colorPrimary"/>



                <Button
                    android:id="@+id/btnContinueShoppping"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="18dp"
                    android:layout_marginBottom="20dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="19sp"
                    android:layout_marginStart="35dp"
                    android:layout_marginEnd="35dp"
                    android:text="@string/continue_shopping"
                    android:fontFamily="@font/tajawal_medium"
                    android:background="@drawable/strok_primarydark"
                    />


            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

        <TextView
            android:id="@+id/txtNoData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/tajawal_bold"
            android:gravity="center"
            android:text="@string/there_are_no_product_in_cart"
            android:textColor="@color/colorb"
            android:textSize="@dimen/_14sdp"
            android:visibility="gone" />


    </RelativeLayout>


</LinearLayout>