<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGray3"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="23dp"
                    android:gravity="center"
                    android:orientation="vertical">


                    <com.application.tedallal_app.Utils.TextViewWithFontbold
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/tajawal_bold"
                        android:text="@string/search"
                        android:textColor="@color/colorGray6"
                        android:textSize="18sp" />

                </LinearLayout>


                <EditText
                    android:id="@+id/editSearch"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginBottom="26dp"
                    android:background="@color/colorw"
                    android:fontFamily="@font/tajawal_regular"
                    android:hint="@string/search_about_specific_product"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textAlignment="textStart"
                    android:imeOptions="actionSearch"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp"
                    android:singleLine="true"
                    android:textColor="@color/colorb"
                    android:textSize="18sp" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <com.application.tedallal_app.Utils.TextViewWithFontbold
                            android:id="@+id/txtNoData"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/tajawal_bold"
                            android:text="@string/there_is_no_product_with_this_name"
                            android:textColor="@color/colorGray6"
                            android:layout_centerInParent="true"
                            android:paddingStart="@dimen/_10sdp"
                            android:gravity="center"
                            android:paddingEnd="@dimen/_10sdp"
                            android:textSize="@dimen/_20sdp" />


                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rcySearch"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>



                    </RelativeLayout>

                </LinearLayout>


            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </RelativeLayout>
</LinearLayout>